[gd_scene load_steps=32 format=3 uid="uid://b84tfmmwyohtu"]

[ext_resource type="FontFile" uid="uid://cqp5o2vpb07yg" path="res://fonts/prstartk.ttf" id="1_2aywb"]
[ext_resource type="Script" path="res://scenes/dialog.gd" id="1_b4hfa"]
[ext_resource type="Texture2D" uid="uid://cdeu0fdnily4n" path="res://sprites/flamy_0.png" id="4_6xyc0"]
[ext_resource type="Texture2D" uid="uid://bj0aj0es1feqs" path="res://sprites/flamy_1.png" id="5_mv8t0"]
[ext_resource type="Texture2D" uid="uid://wiltq3y020h5" path="res://sprites/flamy_2.png" id="6_1u4yy"]
[ext_resource type="Texture2D" uid="uid://d286uiuy4674w" path="res://sprites/flamy_3.png" id="7_5r5af"]
[ext_resource type="Texture2D" uid="uid://sec8ksw5hkpi" path="res://sprites/graby_0.png" id="8_imr7f"]
[ext_resource type="Texture2D" uid="uid://bw2iwuvkcxtsv" path="res://sprites/graby_1.png" id="9_ub3op"]
[ext_resource type="Texture2D" uid="uid://htwl2vwl4jkw" path="res://sprites/graby_2.png" id="10_bimmm"]
[ext_resource type="Texture2D" uid="uid://p2bs652011kj" path="res://sprites/graby_3.png" id="11_nchns"]
[ext_resource type="Texture2D" uid="uid://d4lubcnokbtaf" path="res://sprites/jumpy_0.png" id="12_wtflf"]
[ext_resource type="Texture2D" uid="uid://dd5hxov1c3ogq" path="res://sprites/jumpy_1.png" id="13_gki1a"]
[ext_resource type="Texture2D" uid="uid://brueeiohceh6k" path="res://sprites/jumpy_2.png" id="14_77qk8"]
[ext_resource type="Texture2D" uid="uid://dlcc3qm1pronh" path="res://sprites/jumpy_3.png" id="15_83k42"]
[ext_resource type="Texture2D" uid="uid://cyah2t72k7suk" path="res://sprites/pushy_0.png" id="16_w7f31"]
[ext_resource type="Texture2D" uid="uid://kpuxliphorex" path="res://sprites/pushy_1.png" id="17_sg20w"]
[ext_resource type="Texture2D" uid="uid://c6dnuyq4r3ywd" path="res://sprites/pushy_2.png" id="18_hxt2e"]
[ext_resource type="Texture2D" uid="uid://dma3d7sj8wbha" path="res://sprites/pushy_3.png" id="19_ebat3"]
[ext_resource type="Texture2D" uid="uid://dprmf3bjhgwha" path="res://sprites/sleepy_0.png" id="20_me6hk"]
[ext_resource type="Texture2D" uid="uid://csqvm6kj8f3m" path="res://sprites/sleepy_1.png" id="21_boegm"]
[ext_resource type="Texture2D" uid="uid://bvgu012frlshs" path="res://sprites/sleepy_2.png" id="22_o1ocx"]
[ext_resource type="Texture2D" uid="uid://do4wejummue7p" path="res://sprites/sleepy_3.png" id="23_oo8k3"]
[ext_resource type="Texture2D" uid="uid://dulf7o4bne1g" path="res://sprites/walky_0.png" id="24_wpx2m"]
[ext_resource type="Texture2D" uid="uid://d4dlhich3jnrv" path="res://sprites/walky_1.png" id="25_e643e"]
[ext_resource type="Texture2D" uid="uid://t8nkdrk2c8ia" path="res://sprites/walky_2.png" id="26_yek8v"]
[ext_resource type="Texture2D" uid="uid://dd0gr8r2ekxj" path="res://sprites/walky_3.png" id="27_6ri1w"]

[sub_resource type="SpriteFrames" id="SpriteFrames_v7d26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_6xyc0")
}, {
"duration": 1.0,
"texture": ExtResource("5_mv8t0")
}, {
"duration": 1.0,
"texture": ExtResource("6_1u4yy")
}, {
"duration": 1.0,
"texture": ExtResource("7_5r5af")
}],
"loop": true,
"name": &"flamy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_imr7f")
}, {
"duration": 1.0,
"texture": ExtResource("9_ub3op")
}, {
"duration": 1.0,
"texture": ExtResource("10_bimmm")
}, {
"duration": 1.0,
"texture": ExtResource("11_nchns")
}],
"loop": true,
"name": &"graby",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_wtflf")
}, {
"duration": 1.0,
"texture": ExtResource("13_gki1a")
}, {
"duration": 1.0,
"texture": ExtResource("14_77qk8")
}, {
"duration": 1.0,
"texture": ExtResource("15_83k42")
}],
"loop": true,
"name": &"jumpy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("16_w7f31")
}, {
"duration": 1.0,
"texture": ExtResource("17_sg20w")
}, {
"duration": 1.0,
"texture": ExtResource("18_hxt2e")
}, {
"duration": 1.0,
"texture": ExtResource("19_ebat3")
}],
"loop": true,
"name": &"pushy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("20_me6hk")
}, {
"duration": 1.0,
"texture": ExtResource("21_boegm")
}, {
"duration": 1.0,
"texture": ExtResource("22_o1ocx")
}, {
"duration": 1.0,
"texture": ExtResource("23_oo8k3")
}],
"loop": true,
"name": &"sleepy",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("24_wpx2m")
}, {
"duration": 1.0,
"texture": ExtResource("25_e643e")
}, {
"duration": 1.0,
"texture": ExtResource("26_yek8v")
}, {
"duration": 1.0,
"texture": ExtResource("27_6ri1w")
}],
"loop": true,
"name": &"walky",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_1qkg1"]
resource_name = "new_animation"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("lbl_title2:theme_override_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.776471, 0.352941, 0.603922, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tn87w"]
_data = {
"new_animation": SubResource("Animation_1qkg1")
}

[sub_resource type="Animation" id="Animation_mqg27"]
resource_name = "new_animation"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0698132, 0.0698132, -0.0698132]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gmski"]
_data = {
"new_animation": SubResource("Animation_mqg27")
}

[node name="dialog" type="Node2D"]
process_mode = 3
rotation = -0.0698132
script = ExtResource("1_b4hfa")

[node name="Node2D" type="Node2D" parent="."]
rotation = -0.0698132

[node name="ColorRect2" type="ColorRect" parent="Node2D"]
offset_left = -231.0
offset_top = -135.0
offset_right = 248.0
offset_bottom = 114.0
color = Color(0.584314, 0, 0.584314, 1)

[node name="ColorRect" type="ColorRect" parent="Node2D"]
offset_left = -240.0
offset_top = -154.0
offset_bottom = -24.0
scale = Vector2(2, 2)
color = Color(0, 0, 0, 1)

[node name="character" type="AnimatedSprite2D" parent="."]
position = Vector2(-4, -72)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_v7d26")
animation = &"flamy"

[node name="lbl_title" type="Label" parent="."]
process_mode = 3
offset_left = -240.0
offset_top = -33.0
offset_right = 239.0
offset_bottom = -6.0
theme_override_fonts/font = ExtResource("1_2aywb")
theme_override_font_sizes/font_size = 24
text = "fsfdsfsfsffs"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lbl_description" type="Label" parent="."]
offset_left = -240.0
offset_top = 6.0
offset_right = 239.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("1_2aywb")
text = "dsfsdfsdfsdfdssdfsdsdfsfdsfdfdfdfdfdfdfdfdfdfdfdfdfdfdfd"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="btn" type="Button" parent="."]
offset_left = -39.0
offset_top = 66.0
offset_right = 41.0
offset_bottom = 91.0
theme_override_fonts/font = ExtResource("1_2aywb")
text = "OK"

[node name="lbl_title2" type="Label" parent="."]
offset_left = -240.0
offset_top = -144.0
offset_right = 239.0
offset_bottom = -124.0
theme_override_colors/font_color = Color(0.776471, 0.352941, 0.603922, 1)
theme_override_fonts/font = ExtResource("1_2aywb")
text = "NEW POSSESSION!!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
speed_scale = 2.5
libraries = {
"": SubResource("AnimationLibrary_tn87w")
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
autoplay = "new_animation"
speed_scale = 0.5
libraries = {
"": SubResource("AnimationLibrary_gmski")
}

[connection signal="pressed" from="btn" to="." method="_on_btn_pressed"]
